# miejskie-trendy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ActivityChart.jsx  CategoryBadge.jsx  EventCard.jsx  EventList.jsx  LogsDialog.jsx  RelevanceIndicator.jsx  SettingsDialog.jsx  SourceLinks.jsx  TimeRange.jsx
frontend/src/hooks/: useEvents.js
frontend/src/utils/: formatDate.js
src/miejskie_trendy/: api.py  config.py  db.py  grouper.py  main.py  models.py  normalizer.py  prompt.py  scheduler.py  updater.py
src/miejskie_trendy/collectors/: base.py  bluesky.py  google_news.py  reddit.py  rss.py  tvn_warszawa.py  um_warszawa.py  wykop.py
